--- a/src/theme.less
+++ b/src/theme.less
@@ -1,9 +1,16 @@
 
 // Custom Theming for NG-ZORRO
 // For more information: https://ng.ant.design/docs/customize-theme/en
-@import "../node_modules/ng-zorro-antd/ng-zorro-antd.less";
+//@import "node_modules/ng-zorro-antd/ng-zorro-antd.less";
+@import "./../node_modules/ng-zorro-antd/ng-zorro-antd.less";
 
 // Override less variables to here
 // View all variables: https://github.com/NG-ZORRO/ng-zorro-antd/blob/master/components/style/themes/default.less
 
 // @primary-color: #1890ff;
+
+//ß@import '~ng-zorro-antd/style/index.less';
+//@import '~ng-zorro-antd/style/theme.less';
+
+@primary-color: #1890ff;
+@border-radius-base: 4px;
